<resources>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="sign_on">Войти</string>
    <string name="button_sign_in">Регистрация</string>
    <string name="wrong_login">Логин должен быть не менее 3-х символов</string>
    <string name="welcomeText">Constellation</string>
    <string name="hint_edit_name_reg">Имя</string>
    <string name="hint_edit_surname_reg">Фамилия</string>
    <string name="hint_edit_numberPhone">Номер телефона</string>
    <string name="hint_edit_email">Email</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_about_trivia">About Trivia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile_fragment">Профиль</string>
    <string name="exit_on_login_activity">Выход</string>
    <string name="app_name">Задачи</string>
</resources>
