<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activity.MainActivity"
            android:background="@color/main_background">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_login" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/hint_login"
                app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black" android:textAlignment="textStart"
        />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edit_password" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_password"
                app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_login" android:inputType="textPassword"/>
        <Button
                android:text="@string/sign_on"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign_on" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:background="@color/button_sign_on" app:layout_constraintHorizontal_bias="0.495"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/wrong_login"
                android:textAlignment="center"/>
        <Button
                android:text="@string/button_sign_in"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign_in" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:background="@color/button_sign_on" app:layout_constraintHorizontal_bias="0.49"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/button_sign_on"/>
        <TextView
                android:text="@string/wrong_login"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:id="@+id/wrong_login" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="20sp"
                android:textAlignment="center" android:textColor="@color/wrong_login" android:textStyle="bold"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_password"
                android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>