<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activity.RegistrationActivity"
            android:background="@color/main_background">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_login_reg"
                android:layout_marginEnd="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="11dp"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_login"
                app:layout_constraintHorizontal_bias="0.0"
                android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="textStart"
                app:layout_constraintTop_toBottomOf="@+id/reg_login_info"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edit_password_reg" android:layout_marginEnd="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="11dp" app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_password"
                app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_login_reg"
                android:inputType="textPassword"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_name_reg" android:layout_marginEnd="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="11dp" app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_edit_name_reg"
                app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/reg_personal_info"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_surname_reg" android:layout_marginEnd="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="11dp" app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_edit_surname_reg"
                app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/edit_name_reg" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edit_numberPhone" android:layout_marginEnd="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="11dp" app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_edit_numberPhone"
                app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_surname_reg"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edit_email" android:layout_marginEnd="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="11dp" app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_edit_email"
                app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_numberPhone"/>
        <Button
                android:text="@string/button_sign_in"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_registration" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:background="@color/button_sign_on" app:layout_constraintHorizontal_bias="0.495"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_email"/>
        <TextView
                android:text="Данные для авторизации"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg_login_info" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:textSize="18sp"/>
        <TextView
                android:text="Личные данные"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg_personal_info" android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/edit_password_reg"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>
</layout>